--- a/src/app/_components/flights-components/flight-round-trip/flight-round-trip.component.html
+++ b/src/app/_components/flights-components/flight-round-trip/flight-round-trip.component.html
@@ -35,7 +35,9 @@
     <div class="form-group  col-md-2 padding-rl5">
       <button type="submit" (click)="search()" class="btn btn-orange" style="width:100%;">{{
         'FlightRoundTrip.Search' |
-        translate }}</button>
+        translate }}
+      
+      </button>
     </div>
   </div>
 
