--- a/src/app/_components/flights-components/flight-trip-summary/flight-trip-summary.component.html
+++ b/src/app/_components/flights-components/flight-trip-summary/flight-trip-summary.component.html
@@ -10,35 +10,47 @@
                 <p class="fr dark-gray" style="margin-top: 8px;"> ticket:{{this.numberOfTickets}} </p>
             </div>
             <div class="row">
-                <h5 class="fl blue"><b>{{this.flightservice.flightDetails.fareDetailsField.paxFareField[0].baggageAllowanceField[0].segmentField.originField.airportField.cityField}} ({{this.flightservice.flightDetails.fareDetailsField.paxFareField[0].baggageAllowanceField[0].segmentField.originField.airportField.codeField}}) to {{this.flightservice.flightDetails.fareDetailsField.paxFareField[0].baggageAllowanceField[0].segmentField.destinationField.airportField.cityField}} ({{this.flightservice.flightDetails.fareDetailsField.paxFareField[0].baggageAllowanceField[0].segmentField.destinationField.airportField.codeField}})</b></h5>
-                <p class="fr dark-gray" style="margin-top: 8px;">Airline:<span> {{this.flightservice.flightDetails.fareDetailsField.validatingCarrierField.valueField}}</span></p>
+                <h5 class="fl blue"><b>{{this.flightservice.flightDetails.fareDetailsField.paxFareField[0].baggageAllowanceField[0].segmentField.originField.airportField.cityField}}
+                        ({{this.flightservice.flightDetails.fareDetailsField.paxFareField[0].baggageAllowanceField[0].segmentField.originField.airportField.codeField}})
+                        to
+                        {{this.flightservice.flightDetails.fareDetailsField.paxFareField[0].baggageAllowanceField[0].segmentField.destinationField.airportField.cityField}}
+                        ({{this.flightservice.flightDetails.fareDetailsField.paxFareField[0].baggageAllowanceField[0].segmentField.destinationField.airportField.codeField}})</b></h5>
+                <p class="fr dark-gray" style="margin-top: 8px;">Airline:<span>
+                        {{this.flightservice.flightDetails.fareDetailsField.validatingCarrierField.valueField}}</span></p>
             </div>
             <div *ngIf="this.flightservice.flightType!='oneWay';else  RoundTripAndMulti">
-                    <div class="row">
-                            <h5 class="fl dark-gray"><b>{{this.flightservice.flightDetails.fareDetailsField.paxFareField[0].baggageAllowanceField[0].segmentField.originField.dateField | date}}   </b></h5>
-                            <p class="fr dark-gray" style="margin-top: 8px;">Class: <span> Economy</span></p>
-                        </div>
 
+                <div class="row">
+                    <h5 class="fl dark-gray"><b>{{this.flightservice.flightDetails.fareDetailsField.paxFareField[0].baggageAllowanceField[0].segmentField.originField.dateField
+                            | date}}
+                            -{{this.flightservice.flightDetails.fareDetailsField.paxFareField[0].baggageAllowanceField[1].segmentField.originField.dateField
+                            | date}} </b></h5>
+                    <p class="fr dark-gray" style="margin-top: 8px;">Class: <span> Economy</span></p>
+                </div>
             </div>
             <ng-template #RoundTripAndMulti>
-                    <div class="row">
-                            <h5 class="fl dark-gray"><b>{{this.flightservice.flightDetails.fareDetailsField.paxFareField[0].baggageAllowanceField[0].segmentField.originField.dateField | date}} -{{this.flightservice.flightDetails.fareDetailsField.paxFareField[0].baggageAllowanceField[1].segmentField.originField.dateField | date}}   </b></h5>
-                            <p class="fr dark-gray" style="margin-top: 8px;">Class: <span> Economy</span></p>
-                        </div>
-                  </ng-template>
+                <div class="row">
+                    <h5 class="fl dark-gray"><b>{{this.flightservice.flightDetails.fareDetailsField.paxFareField[0].baggageAllowanceField[0].segmentField.originField.dateField
+                            | date}} </b></h5>
+                    <p class="fr dark-gray" style="margin-top: 8px;">Class: <span> Economy</span></p>
+                </div>
+            </ng-template>
 
-           
+
             <div class="row">
-                <h5 class="fl dark-gray"><b>Baggage allowance:</b> {{this.flightservice.flightDetails.fareDetailsField.paxFareField[0].baggageAllowanceField[0].baggageField.allowedField}} Kg(s)</h5>
+                <h5 class="fl dark-gray"><b>Baggage allowance:</b>
+                    {{this.flightservice.flightDetails.fareDetailsField.paxFareField[0].baggageAllowanceField[0].baggageField.allowedField}}</h5>
             </div>
             <div class="border-bottom row"></div>
 
             <div class="row">
-                <h5 class="fl blue"><b>Traveler  ( Adult: {{this.flightservice.numberOfAdult}}  - Childs: {{this.flightservice.numberOfChilds}})</b></h5>
+                <h5 class="fl blue"><b>Traveler ( Adult: {{this.flightservice.numberOfAdult}} - Childs:
+                        {{this.flightservice.numberOfChilds}})</b></h5>
             </div>
             <div class="row">
                 <h5 class="fl dark-gray"><b>Flight</b></h5>
-                <p class="fr dark-gray" style="margin-top: 8px;">{{this.flightservice.flightDetails.priceField.amountField}} {{this.flightservice.flightDetails.priceField.currencyField}}</p>
+                <p class="fr dark-gray" style="margin-top: 8px;">{{this.flightservice.flightDetails.priceField.amountField}}
+                    {{this.flightservice.flightDetails.priceField.currencyField}}</p>
             </div>
             <div class="row">
                 <h5 class="fl dark-gray"><b>Taxes &amp; Fees</b></h5>
@@ -51,28 +63,27 @@
             <div class="border-bottom row"></div>
             <div class="row">
                 <h3 class="fl dark-gray"><b>Total trip</b></h3>
-                <h3 class="fr dark-gray">{{this.flightservice.flightDetails.priceField.amountField}} {{this.flightservice.flightDetails.priceField.currencyField}}</h3>
+                <h3 class="fr dark-gray">{{this.flightservice.flightDetails.priceField.amountField}}
+                    {{this.flightservice.flightDetails.priceField.currencyField}}</h3>
             </div>
             <div class="row">
-                <h5 class="dark-gray"><b>Rates ar.e quoted in {{this.flightservice.flightDetails.priceField.currencyField}}</b></h5>
-                <h5 class="orange"> THIS BOOKING WILL GIVE YOU 130 POINTS</h5>
+                <h5 class="dark-gray"><b>Rates ar.e quoted in
+                        {{this.flightservice.flightDetails.priceField.currencyField}}</b></h5>
 
             </div>
 
             <div class="border-bottom row"></div>
-            <div *ngIf="nonRefundableFieldSpecified==False;else NOnRefundableTemplate">
+            <div *ngIf="!this.flightservice.flightDetails.fareDetailsField.nonRefundableFieldSpecified;else NOnRefundableTemplate">
+                <p class="dark-gray">
+                    Refundable
+                </p>
+            </div>
 
-           
-            <p class="dark-gray">
-                Refundable
-            </p>
-        </div>
-
-        <ng-template #NOnRefundableTemplate>
-            <p class="dark-gray">
-               NOn Refundable
-            </p>
-          </ng-template>
+            <ng-template #NOnRefundableTemplate>
+                <p class="dark-gray">
+                    NOn Refundable
+                </p>
+            </ng-template>
             <div class="row text-center">
                 <button class="btn btn-orange" (click)="continueBooking()">Continue Booking</button>
             </div>
