--- a/src/app/_components/flights-components/flights/flights.component.html
+++ b/src/app/_components/flights-components/flights/flights.component.html
@@ -1,31 +1,34 @@
-<div *ngIf="router.url === '/home' ||router.url === '/';else flight_content" class="container ">
-    <app-flight-type-select></app-flight-type-select>
-
+<div *ngIf="flightService.IsCompleated;else other_content">
+    <app-load></app-load>
 </div>
+<ng-template #other_content>
+    <div *ngIf="router.url === '/home' ||router.url === '/';else flight_content" class="container ">
+        <app-flight-type-select></app-flight-type-select>
 
-<ng-template #flight_content>
-    <div class="home-img">
-        <app-menu-links></app-menu-links>
-        <app-header></app-header>
+    </div>
+    <ng-template #flight_content>
+        <div class="home-img">
+            <app-menu-links></app-menu-links>
+            <app-header></app-header>
 
-        <div class="container">
-            <div class="col-xs-8 col-xs-offset-2 home-head1-container">
-                <h1 class="home-head2 text-center">{{'Flight.ExperienceTheFreedom'|translate}} </h1>
+            <div class="container">
+                <div class="col-xs-8 col-xs-offset-2 home-head1-container">
+                    <h1 class="home-head2 text-center">{{'Flight.ExperienceTheFreedom'|translate}} </h1>
+                </div>
+            </div>
+            <div class="container ">
+                <app-flight-type-select></app-flight-type-select>
             </div>
         </div>
-        <div class="container ">
-            <app-flight-type-select></app-flight-type-select>
-        </div>
-    </div>
 
-    <div *ngIf="flightservice.showFlightsDetails" class="row" style="clear: both;">
-        <div  id="left">
-            <app-flight-filter ></app-flight-filter>
+        <div *ngIf="flightService.showFlightsDetails" class="row" style="clear: both;">
+            <div id="left">
+                <app-flight-filter></app-flight-filter>
+            </div>
+            <div id="right">
+                <app-flight-result></app-flight-result>
+            </div>
         </div>
-
-        <div id="right">
-            <app-flight-result></app-flight-result>
-        </div>
-    </div>
-    <app-footer></app-footer>
+        <app-footer></app-footer>
+    </ng-template>
 </ng-template>
