--- a/src/styles.css
+++ b/src/styles.css
@@ -38,7 +38,7 @@ body{
     .home-slider{
         position: absolute;
         width: 100%;
-        height: 816px;
+        height: 900px;
         overflow: hidden;
     }
     .home-main-container{
@@ -569,7 +569,9 @@ a:hover{
     border-radius:8px;
     padding: 15px;
     margin: 30px 15px 0 30px;
-    border: 1px solid #e4e4e4;
+    -webkit-box-shadow: 0px 0px 7px 0px rgba(0,0,0,0.21);
+    -moz-box-shadow: 0px 0px 7px 0px rgba(0,0,0,0.21);
+    box-shadow: 0px 0px 7px 0px rgba(0,0,0,0.21);
 }
 
 @media(max-width:991px){
@@ -577,6 +579,9 @@ a:hover{
         padding: 0;
         margin: 0;
         border: 0 solid #e4e4e4;
+        -webkit-box-shadow: 0px 0px 0px 0px rgba(0,0,0,0);
+        -moz-box-shadow:  0px 0px 0px 0px rgba(0,0,0,0);
+        box-shadow: 0px 0px 0px 0px rgba(0,0,0,0);
     }
 }
 
@@ -587,7 +592,10 @@ a:hover{
     border-radius:8px;
     padding: 0;
     margin: 15px 0;
-    border: 1px solid #e4e4e4;
+    /* border: 1px solid #e4e4e4; */
+    -webkit-box-shadow: 0px 0px 7px 0px rgba(0,0,0,0.21);
+    -moz-box-shadow: 0px 0px 7px 0px rgba(0,0,0,0.21);
+    box-shadow: 0px 0px 7px 0px rgba(0,0,0,0.21);
 }
 
 ::-webkit-scrollbar
@@ -688,6 +696,7 @@ border: 1px solid #e4e4e4;
   .img-box-result{
       width: 70px;
       height: auto;
+      float: left;
   }
   
 
@@ -1062,6 +1071,9 @@ border: 1px solid #e4e4e4;
     height: 1px;
     margin: 10px 0;
 }
+.text-center2{
+    text-align: center;
+}
 
 
 .flight-logo{
@@ -1070,9 +1082,15 @@ border: 1px solid #e4e4e4;
 
 @media(max-width:767px){
     .flight-logo{
-        padding: 9px 0 0 15px;
+       margin-bottom: 25px;
+       padding: 20px 0 0 15px;
     }
+    .text-center2{
+        text-align: left;
+    }
+    
 }
+
 
 
 
@@ -1181,6 +1199,8 @@ border: 1px solid #e4e4e4;
         .wed-cont{
         padding: 15px;
         background-color: #144166;
+        border-top-left-radius: 25px;
+        border-top-right-radius: 25px;
         }
     }
 
@@ -1301,8 +1321,8 @@ box-shadow: 0px 0px 7px 0px rgba(0,0,0,0.21);
     background-color: #fff;
     padding:  70px;
     -webkit-box-shadow: 0px 0px 7px 0px rgba(0,0,0,0.21);
--moz-box-shadow: 0px 0px 7px 0px rgba(0,0,0,0.21);
-box-shadow: 0px 0px 7px 0px rgba(0,0,0,0.21);
+    -moz-box-shadow: 0px 0px 7px 0px rgba(0,0,0,0.21);
+    box-shadow: 0px 0px 7px 0px rgba(0,0,0,0.21);
 }
 
 
@@ -1355,3 +1375,143 @@ box-shadow: 0px 0px 7px 0px rgba(0,0,0,0.21);
     border-top-right-radius: 8px ;
     border-bottom-right-radius: 8px ;
 }
+
+.img-strip{
+    margin-left: 20px;
+    float: left;
+    margin-right: 20px
+}
+
+
+.filter-button-mobile{
+    background-color: #0e2f49;
+    width: 60px;
+    height: 60px;
+    color: #fff;
+    padding: 20px;
+    border-radius: 7px;
+    text-align: center; 
+    font-size: 20px;
+    border: 0;
+
+     
+}
+
+
+
+
+
+  @-webkit-keyframes ani-mouse {
+      0% {
+      opacity: 1;
+      top: 29%;
+      }
+      15% {
+      opacity: 1;
+      top: 50%;
+      }
+      50% {
+      opacity: 0;
+      top: 50%;
+      }
+      100% {
+      opacity: 0;
+      top: 29%;
+      }
+  }
+  @-moz-keyframes ani-mouse {
+      0% {
+      opacity: 1;
+      top: 29%;
+      }
+      15% {
+      opacity: 1;
+      top: 50%;
+      }
+      50% {
+      opacity: 0;
+      top: 50%;
+      }
+      100% {
+      opacity: 0;
+      top: 29%;
+      }
+  }
+  @keyframes ani-mouse {
+      0% {
+      opacity: 1;
+      top: 29%;
+      }
+      15% {
+      opacity: 1;
+      top: 50%;
+      }
+      50% {
+      opacity: 0;
+      top: 50%;
+      }
+      100% {
+      opacity: 0;
+      top: 29%;
+      }
+  }
+   .scroll-btn {
+      display: block;
+      position: absolute;
+      left: 0;
+      right: 0;
+      text-align: center;
+      margin-top: -65px;
+  }
+  .scroll-btn > * {
+      display: inline-block;
+      line-height: 18px;
+      font-size: 13px;
+      font-weight: normal;
+      color: #7f8c8d;
+      color: #ffffff;
+      font-family: "proxima-nova", "Helvetica Neue", Helvetica, Arial, sans-serif;
+      letter-spacing: 2px;
+  }
+  .scroll-btn > *:hover,
+  .scroll-btn > *:focus,
+  .scroll-btn > *.active {
+      color: #ffffff;
+  }
+  .scroll-btn > *:hover,
+  .scroll-btn > *:focus,
+  .scroll-btn > *:active,
+  .scroll-btn > *.active {
+      opacity: 0.8;
+      filter: alpha(opacity=80);
+  }
+  .scroll-btn .mouse {
+      position: relative;
+      display: block;
+      width: 35px;
+      height: 55px;
+      margin: 0 auto 20px;
+      -webkit-box-sizing: border-box;
+      -moz-box-sizing: border-box;
+      box-sizing: border-box;
+      border: 3px solid white;
+      border-radius: 23px;
+  }
+  .scroll-btn .mouse > * {
+      position: absolute;
+      display: block;
+      top: 29%;
+      left: 50%;
+      width: 8px;
+      height: 8px;
+      margin: -4px 0 0 -4px;
+      background: white;
+      border-radius: 50%;
+      -webkit-animation: ani-mouse 2.5s linear infinite;
+      -moz-animation: ani-mouse 2.5s linear infinite;
+      animation: ani-mouse 2.5s linear infinite;
+  }
+
+  .carousel-indicators{
+      display: none;
+  }
