--- a/src/app/_components/flights-components/flight-details/flight-details.component.html
+++ b/src/app/_components/flights-components/flight-details/flight-details.component.html
@@ -131,7 +131,7 @@
                 </a>
               </div>
               <div class="col-sm-6">
-                <a type="button " class="btn" (click)="isCollapsed = !isCollapsed" [attr.aria-expanded]="!isCollapsed"
+                <a type="button " class="btn fr" (click)="isCollapsed = !isCollapsed" [attr.aria-expanded]="!isCollapsed"
                   aria-controls="collapseBasic">
                   <span class=" blue" style="margin:5px;"> <b>FLIGHT DETAILS</b></span>
                   <span class="glyphicon fr drop-arrow" [class.glyphicon-menu-up]="isCollapsed"
@@ -146,11 +146,11 @@
                     <div class="col-md-12 ">
 
                       <div _ngcontent-c5="">
-                        <label _ngcontent-c5="">
+                        <h4 _ngcontent-c5="" class="fl">
                           <b class="blue">Depart</b>
                           <span class="dark-gray"> {{Route.Segment[0].Origin.Airport.City}} -
                             {{Route.Segment[Route.Segment.length-1].Destination.Airport.City}}</span> <span
-                            _ngcontent-c5=""></span></label>
+                            _ngcontent-c5=""></span></h4>
                       </div>
 
 
@@ -194,22 +194,22 @@
                     <div class="col-md-12 ">
                       <div *ngIf="i=='0';else retunDetailsTemplate">
                         <div _ngcontent-c5="">
-                          <label _ngcontent-c5="">
+                          <h4 _ngcontent-c5="" class="fl">
 
                             <b class="blue">Depart</b>
                             <span class="dark-gray"> {{Route.Segment[0].Origin.Airport.City}} -
                               {{Route.Segment[Route.Segment.length-1].Destination.Airport.City}}</span> <span
-                              _ngcontent-c5=""></span></label>
+                              _ngcontent-c5=""></span></h4>
                         </div>
                       </div>
                       <ng-template #retunDetailsTemplate>
                         <div _ngcontent-c5="">
-                          <label _ngcontent-c5="">
+                          <h4 _ngcontent-c5="" class="fl">
 
                             <b class="blue">Return</b>
                             <span class="dark-gray"> {{Route.Segment[0].Origin.Airport.City}} -
                               {{Route.Segment[Route.Segment.length-1].Destination.Airport.City}}</span> <span
-                              _ngcontent-c5=""></span></label>
+                              _ngcontent-c5=""></span></h4>
                         </div>
                       </ng-template>
                       <h4 class="fr">
