--- a/src/styles.css
+++ b/src/styles.css
@@ -1515,3 +1515,15 @@ box-shadow: 0px 0px 7px 0px rgba(0,0,0,0.21);
   .carousel-indicators{
       display: none;
   }
+
+  .row-eq-height {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    flex-wrap: wrap;
+  }
+  .row-eq-height > [class*='col-'] {
+    display: flex;
+    flex-direction: column;
+  }
