--- a/src/app/_components/flights-components/flights/flights.component.html
+++ b/src/app/_components/flights-components/flights/flights.component.html
@@ -1,7 +1,8 @@
-<div *ngIf="flightService.IsCompleated;else other_content">
+<div *ngIf="flightService.isCompleated;else flight_content">
     <app-load></app-load>
 </div>
-<ng-template #other_content>
+
+<ng-template #flight_content>
     <div *ngIf="router.url === '/home' ||router.url === '/';else flight_content" class="container ">
         <app-flight-type-select></app-flight-type-select>
 
