--- a/src/app/_components/header-compenents/header-web/header-web.component.html
+++ b/src/app/_components/header-compenents/header-web/header-web.component.html
@@ -2,7 +2,7 @@
     <div class="container">
       <div class="row">
         <div>
-          <a class="navbar-brand" href="#"> <img src="../assets/img/Tour To logo.png" alt="" class="logo"> </a>
+          <a class="navbar-brand"  routerLink="/home" routerLinkActive="router-link-active" > <img src="../assets/img/Tour To logo.png" alt="" class="logo"> </a>
         </div>
         <div class="float-right">
   
